# r3m3m3

./: .gitignore  Anchor.toml  LICENSE  README.MD  jest.config.js  package.json  tsconfig.json
app/: package.json
app/api/: useProgram.tsx
app/app/: page.tsx
app/components/: unstake-requests.tsx
app/config/: site.ts
app/lib/: connection.ts  helpers.ts  instructions.ts  types.ts
app/lib/constants/: index.ts
app/lib/stake/helpers/: staker_for_fee.ts
programs/s3f3.io/: Cargo.toml
programs/s3f3.io/src/: error.rs  lib.rs
programs/s3f3.io/src/instructions/: cancel_unstake.rs  claim_fees.rs  initialize_config.rs  initialize_escrow.rs  initialize_pool.rs  mod.rs  stake.rs  unstake.rs  withdraw.rs
programs/s3f3.io/src/instructions/lut/: create.rs  extend.rs  mod.rs
programs/s3f3.io/src/states/: config.rs  mod.rs  pool.rs  unstake_request.rs
programs/s3f3.io/src/utils/: token.rs
scripts/: aboba.ts  get.ts  inits.ts
scripts/lib/: constants.ts  instructions.ts  pda.ts
scripts/stake/: index.ts
tests/: inits.test.ts  rememe.ts
tests/lib/: instructions.ts
tests/stake/: index.ts
tests/stake/helpers/: compute.ts
