[package]
name = "rememe"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rememe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "=1.16.20"
solana-address-lookup-table-program = "=1.16.20"
stake_for_fee_interface = {git="https://github.com/MeteoraAg/stake-for-fee-sdk"}
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-math = { version = "0.2", features = ["no-entrypoint"] }
spl-memo = "=4.0.0"
num_enum = "=0.7.0"
ahash = "=0.8.5"

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.0"
rand = "0.8.5"
